--- a/index.html
+++ b/index.html
@@ -10,9 +10,14 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
     <link rel="stylesheet" href="./styles/index.css">
 </head>
+ <!--body-->
 <body>
+  <div class="backgraundcolor" class="col-12"></div>
+  <div class="sidenav"></div>
+  <h1 id='title'>Bem-vindo ao<br>GitHer</h1>
+  <!--NavBar-->
     <div id='backgraund'></div>
-    <nav class="navbar navbar-expand-md bg-dark navbar-dark" id='navbar-index'>
+    <nav class="navbar navbar-expand-md bg-dark navbar-dark">
         <a class="navbar-brand" href="./index.html">GitHub</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" id='button-collapsible-Navbar' data-target="#collapsibleNavbar">
           <span class="navbar-toggler-icon"></span>
@@ -29,10 +34,24 @@
         </div>  
       </nav>
       <br>
+    <!--NavBar-->
+
+    <!--Login-->
+      <form>
+        <div class="form-group">
+           <input type="text"  id="user" class="form-control" placeholder="Nome de Usuario">
+        </div>
+        <div class="form-group">
+           <input type="password" id="senha" class="form-control col-4" placeholder="Senha">
+        </div>
+     </form>
     </nav>
-    <main>
-    <h1 class="display-2 col-6" id='title'>Bem-Vindo ao <br>GitHer</h1>
-    </main>
-    <button id='register-button-index' type="button" class="btn btn-outline-light text-grey">Registrar</button>
+    <div class="wrapper">
+      <div class="btn">
+        <button type="button" id='login'>Entrar</button>
+      </div>
+    </div>
+    <p id="login_page-index">Não tem conta ainda? se <a href="./pages/login_page.html" style="color: gray;">registre</a></p>
+    <!--Login-->
 </body>
 </html>
