--- a/index.html
+++ b/index.html
@@ -12,12 +12,12 @@
 </head>
  <!--body-->
 <body>
-  <div class="backgraundcolor" class="col-12"></div>
+  <p>Isto e um easteregg</p>
   <div class="sidenav"></div>
-  <h1 id='title'>Bem-vindo ao<br>GitHer</h1>
+  <h1 id='title' >Bem-vindo ao<br>GitHer</h1>
   <!--NavBar-->
     <div id='backgraund'></div>
-    <nav class="navbar navbar-expand-md bg-dark navbar-dark">
+    <nav class="navbar navbar-expand-md bg-dark navbar-dark col-12">
         <a class="navbar-brand" href="./index.html">GitHub</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" id='button-collapsible-Navbar' data-target="#collapsibleNavbar">
           <span class="navbar-toggler-icon"></span>
@@ -35,14 +35,14 @@
       </nav>
       <br>
     <!--NavBar-->
-
+     
     <!--Login-->
       <form>
         <div class="form-group">
            <input type="text"  id="user" class="form-control" placeholder="Nome de Usuario">
         </div>
         <div class="form-group">
-           <input type="password" id="senha" class="form-control col-4" placeholder="Senha">
+           <input type="password" id="senha" class="form-control" placeholder="Senha">
         </div>
      </form>
     </nav>
@@ -51,7 +51,7 @@
         <button type="button" id='login'>Entrar</button>
       </div>
     </div>
-    <p id="login_page-index">Não tem conta ainda? se <a href="./pages/login_page.html" style="color: gray;">registre</a></p>
     <!--Login-->
+    <p id="login_page-index">Não tem conta ainda? se <a href="./pages/login_page.html" style="color: gray;">registre</a></p>
 </body>
 </html>
